syntax="proto3";
option java_package= "ma.enset.stubs";
service BankService{
  rpc convert(ConvertCurrencyRequest) returns (ConvertCurrencyResponse);
  rpc getCurrencyStream(ConvertCurrencyRequest) returns (stream ConvertCurrencyResponse);
  rpc performStream(stream ConvertCurrencyRequest) returns (ConvertCurrencyResponse);
  rpc fullCurrencyStream(stream ConvertCurrencyRequest) returns (stream ConvertCurrencyResponse);
}
message ConvertCurrencyRequest{
  double amount=1;
  string currencyFrom=2;
  string currencyTo=3;
}
message ConvertCurrencyResponse{
  double amount=1;
  string currencyFrom=2;
  string currencyTo=3;
  double result=4;
}